--- a/users.html
+++ b/users.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="navbar">
-      <a href="index.html">إدارة المستخدمين</a>
+      <a href="users.html">إدارة المستخدمين</a>
       <a href="attendance.html">الحضور</a>
       <a href="payment.html">الدفع</a>
       <a href="change-password.html">تغيير كلمة المرور</a>
